--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
+    "morgan": "^1.9.1",
     "mssql": "^5.1.0",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.1",
